--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <section class="section-center">
-      <article class="content">
+           <article class="content">
         <div class="info">
-        <h1 class="info-h1">Here comes 2021</h1>
-        <p>2020 was a shitty year, let's begin another one</p>
+        <h1 class="info-h1">Here comes <span class="next-year"></span></h1>
+        <p><span class="last-year"></span> was a long year for all of us</p>
         </div>
         <div class="deadline">
           <div class="deadline-format">
@@ -43,6 +43,7 @@
           </div>
         </div>
       </article>
+     
      
       <video autoplay muted loop id="video">
         <source src="./fireworks.mp4" type="video/mp4">
